# sf-data-pipelines-ibkr

./: .gitignore  Dockerfile  README.md  certbot-renew.service  certbot-renew.timer  deploy.sh  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  useWithIAMPermissions.yml
config/: airflow.cfg
dags/: config.py  dashboard_dags.py  tools.py
dags/aws/: __init__.py  rds.py  risk_free_rate_flow.py  s3.py  secrets_manager.py
dags/sql/: all_fund_returns_create.sql  all_fund_returns_materialize.sql  benchmark_create.sql  benchmark_merge.sql  calendar_create.sql  calendar_merge.sql  delta_nav_create.sql  delta_nav_merge.sql  dividends_create.sql  dividends_merge.sql  fund_returns_create.sql  fund_returns_materialize.sql  holding_returns_create.sql  holding_returns_materialize.sql  positions_create.sql  positions_merge.sql  returns_create.sql  returns_materialize.sql  risk_free_rate_create.sql  risk_free_rate_merge.sql  trades_create.sql  trades_merge.sql
dags/tasks/: benchmark_tasks.py  calendar_tasks.py  ibkr_to_s3_tasks.py  return_materialization_tasks.py  risk_free_rate_tasks.py  s3_to_rds_tasks.py
dags/tasks/return_materialization_sub_tasks/: all_fund_returns_task.py  fund_returns_task.py  holding_returns_task.py
dags/tasks/s3_to_rds_sub_tasks/: delta_nav_flow.py  delta_nav_task.py  dividends_task.py  positions_flow.py  positions_task.py  trades_task.py  trades_task.py.py
