[project]
name = "sf-data-pipelines-ibkr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow==3.0.4",
    "boto3>=1.40.11",
    "fredapi>=0.5.2",
    "pandas-market-calendars>=5.1.1",
    "polars>=1.32.3",
    "psycopg2-binary>=2.9.10",
    "s3fs>=0.4.2",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
